change form title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     <header>
-        <h1 id="title">MK Survey Form</h1>
+        <h1 id="title">SP Survey Form</h1>
         <p id="description">Thank you for taking the time and help us understand which training materials to create</p>
     </header>
 </div>
